if(COMPILE_TESTS)
add_executable(testGLAntialiasing testGLAntialiasing.cpp)
add_executable(testGLDrawHomographyCamera testGLDrawHomographyCamera.cpp)
add_executable(testGLHomography testGLHomography.cpp)
add_executable(testGlSandboxArcBall		testGlSandboxArcBall.cpp)
add_executable(testGLSandboxCheckBounds	testGLSandboxCheckBounds.cpp)
add_executable(testGLSandboxClipPlane testGLSandboxClipPlane.cpp)
add_executable(testGlSandboxCylinderStimulus	testGlSandboxCylinderStimulus.cpp)
add_executable(testGLSandboxDataReader		testGLSandboxDataReader.cpp)
add_executable(testGLSandboxSocketReader	testGLSandboxSocketReader.cpp)
add_executable(testGlSandboxStimulusDrawer	testGlSandboxStimulusDrawer.cpp)
add_executable(testGLUTSequential	testGLUTSequential.cpp)
add_executable(testObjLoader2Visualization	testObjLoader2Visualization.cpp)
add_executable(testObjLoaderVisualization	testObjLoaderVisualization.cpp)
add_executable(testTinyObjLoaderVisualization	testTinyObjLoaderVisualization.cpp)
add_executable(testGLWedgeStimulus testGLWedgeStimulus.cpp)
add_executable(testGLTrapezoidStimulus testGLTrapezoidStimulus.cpp)
add_executable(testGLBug testGLBug.cpp)

target_link_libraries(testGLAntialiasing Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLDrawHomographyCamera Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLHomography Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGlSandboxArcBall		Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLSandboxCheckBounds	Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLSandboxClipPlane	Core GLViz Communication ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGlSandboxCylinderStimulus	Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLSandboxDataReader		Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLSandboxSocketReader	Core GLViz Communication ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGlSandboxStimulusDrawer	Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLUTSequential	Core GLViz Communication ${Boost_LIBRARIES} ${GL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testObjLoader2Visualization	Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${GLEW_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testObjLoaderVisualization	Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${GLEW_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testTinyObjLoaderVisualization	Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${GLEW_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLWedgeStimulus Core GLViz ${Boost_LIBRARIES} ${GL_LIBS} ${GLEW_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(testGLTrapezoidStimulus Core GLViz Experiment glfw ${Boost_LIBRARIES} ${GL_LIBS} ${GLFW_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})

target_link_libraries(testGLBug Core GLViz Experiment glfw ${Boost_LIBRARIES} ${GL_LIBS} ${GLFW_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
if (COMPILE_GLFW)
add_executable(testGLFW testGLFW.cpp)
target_link_libraries(testGLFW glfw Core ${GL_LIBS} ${GLEW_LIBRARY} ${GLFW_LIBRARIES})
endif(COMPILE_GLFW)

endif(COMPILE_TESTS)
